qt/gen_qformlayout.h

class QFormLayout;
typedef QFormLayout::TakeRowResult QFormLayout__TakeRowResult;
class QLayout;
class QLayoutItem;
class QMetaObject;
class QRect;
class QSize;
class QWidget;
typedef struct QEvent QEvent;
typedef struct QFormLayout QFormLayout;
typedef struct QFormLayout__TakeRowResult QFormLayout__TakeRowResult;
typedef struct QLayout QLayout;
typedef struct QLayoutItem QLayoutItem;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QRect QRect;
typedef struct QSize QSize;
typedef struct QSpacerItem QSpacerItem;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWidget QWidget;
bool QFormLayout_override_virtual_timerEvent(void* self, intptr_t slot);
void QFormLayout_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QFormLayout_override_virtual_customEvent(void* self, intptr_t slot);
void QFormLayout_virtualbase_customEvent(void* self, QEvent* event);
bool QFormLayout_override_virtual_connectNotify(void* self, intptr_t slot);
void QFormLayout_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QFormLayout_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QFormLayout_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
bool QFormLayout_override_virtual_minimumHeightForWidth(void* self, intptr_t slot);
int QFormLayout_virtualbase_minimumHeightForWidth(const void* self, int param1);
bool QFormLayout_override_virtual_widget(void* self, intptr_t slot);
QWidget* QFormLayout_virtualbase_widget(void* self);
bool QFormLayout_override_virtual_spacerItem(void* self, intptr_t slot);
QSpacerItem* QFormLayout_virtualbase_spacerItem(void* self);
const QMetaObject* QFormLayout_staticMetaObject();
void QFormLayout_delete(QFormLayout* self);
void QFormLayout__TakeRowResult_delete(QFormLayout__TakeRowResult* self);