qt/gen_qformlayout.nim

proc fQFormLayout_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QFormLayout_virtualbase_timerEvent".}
proc fcQFormLayout_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_timerEvent".}
proc fQFormLayout_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QFormLayout_virtualbase_customEvent".}
proc fcQFormLayout_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_customEvent".}
proc fQFormLayout_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QFormLayout_virtualbase_connectNotify".}
proc fcQFormLayout_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_connectNotify".}
proc fQFormLayout_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QFormLayout_virtualbase_disconnectNotify".}
proc fcQFormLayout_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_disconnectNotify".}
proc fQFormLayout_virtualbase_minimumHeightForWidth(self: pointer, param1: cint): cint{.importc: "QFormLayout_virtualbase_minimumHeightForWidth".}
proc fcQFormLayout_override_virtual_minimumHeightForWidth(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_minimumHeightForWidth".}
proc fQFormLayout_virtualbase_widget(self: pointer, ): pointer{.importc: "QFormLayout_virtualbase_widget".}
proc fcQFormLayout_override_virtual_widget(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_widget".}
proc fQFormLayout_virtualbase_spacerItem(self: pointer, ): pointer{.importc: "QFormLayout_virtualbase_spacerItem".}
proc fcQFormLayout_override_virtual_spacerItem(self: pointer, slot: int) {.importc: "QFormLayout_override_virtual_spacerItem".}
proc fcQFormLayout_staticMetaObject(): pointer {.importc: "QFormLayout_staticMetaObject".}
proc fcQFormLayout_delete(self: pointer) {.importc: "QFormLayout_delete".}
proc fcQFormLayoutTakeRowResult_delete(self: pointer) {.importc: "QFormLayout__TakeRowResult_delete".}


func init*(T: type QFormLayout, h: ptr cQFormLayout): QFormLayout =
  T(h: h)
proc create*(T: type QFormLayout, parent: gen_qwidget.QWidget): QFormLayout =

  QFormLayout.init(fcQFormLayout_new(parent.h))
proc create*(T: type QFormLayout, ): QFormLayout =

  QFormLayout.init(fcQFormLayout_new2())
proc metaObject*(self: QFormLayout, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQFormLayout_metaObject(self.h))

proc metacast*(self: QFormLayout, param1: cstring): pointer =

  fcQFormLayout_metacast(self.h, param1)

proc metacall*(self: QFormLayout, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQFormLayout_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QFormLayout, s: cstring): string =

  let v_ms = fcQFormLayout_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QFormLayout, s: cstring): string =

  let v_ms = fcQFormLayout_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setFieldGrowthPolicy*(self: QFormLayout, policy: QFormLayoutFieldGrowthPolicy): void =

  fcQFormLayout_setFieldGrowthPolicy(self.h, cint(policy))

proc fieldGrowthPolicy*(self: QFormLayout, ): QFormLayoutFieldGrowthPolicy =

  QFormLayoutFieldGrowthPolicy(fcQFormLayout_fieldGrowthPolicy(self.h))

proc setRowWrapPolicy*(self: QFormLayout, policy: QFormLayoutRowWrapPolicy): void =

  fcQFormLayout_setRowWrapPolicy(self.h, cint(policy))

proc rowWrapPolicy*(self: QFormLayout, ): QFormLayoutRowWrapPolicy =

  QFormLayoutRowWrapPolicy(fcQFormLayout_rowWrapPolicy(self.h))

proc setLabelAlignment*(self: QFormLayout, alignment: gen_qnamespace.AlignmentFlag): void =

  fcQFormLayout_setLabelAlignment(self.h, cint(alignment))

proc labelAlignment*(self: QFormLayout, ): gen_qnamespace.AlignmentFlag =

  gen_qnamespace.AlignmentFlag(fcQFormLayout_labelAlignment(self.h))

proc setFormAlignment*(self: QFormLayout, alignment: gen_qnamespace.AlignmentFlag): void =

  fcQFormLayout_setFormAlignment(self.h, cint(alignment))

proc formAlignment*(self: QFormLayout, ): gen_qnamespace.AlignmentFlag =

  gen_qnamespace.AlignmentFlag(fcQFormLayout_formAlignment(self.h))

proc setHorizontalSpacing*(self: QFormLayout, spacing: cint): void =

  fcQFormLayout_setHorizontalSpacing(self.h, spacing)

proc horizontalSpacing*(self: QFormLayout, ): cint =

  fcQFormLayout_horizontalSpacing(self.h)

proc setVerticalSpacing*(self: QFormLayout, spacing: cint): void =

  fcQFormLayout_setVerticalSpacing(self.h, spacing)

proc verticalSpacing*(self: QFormLayout, ): cint =

  fcQFormLayout_verticalSpacing(self.h)

proc spacing*(self: QFormLayout, ): cint =

  fcQFormLayout_spacing(self.h)

proc setSpacing*(self: QFormLayout, spacing: cint): void =

  fcQFormLayout_setSpacing(self.h, spacing)

proc addRow*(self: QFormLayout, label: gen_qwidget.QWidget, field: gen_qwidget.QWidget): void =

  fcQFormLayout_addRow(self.h, label.h, field.h)

proc addRow2*(self: QFormLayout, label: gen_qwidget.QWidget, field: gen_qlayout.QLayout): void =

  fcQFormLayout_addRow2(self.h, label.h, field.h)

proc addRow3*(self: QFormLayout, labelText: string, field: gen_qwidget.QWidget): void =

  fcQFormLayout_addRow3(self.h, struct_miqt_string(data: labelText, len: csize_t(len(labelText))), field.h)

proc addRow4*(self: QFormLayout, labelText: string, field: gen_qlayout.QLayout): void =

  fcQFormLayout_addRow4(self.h, struct_miqt_string(data: labelText, len: csize_t(len(labelText))), field.h)

proc addRowWithWidget*(self: QFormLayout, widget: gen_qwidget.QWidget): void =

  fcQFormLayout_addRowWithWidget(self.h, widget.h)

proc addRowWithLayout*(self: QFormLayout, layout: gen_qlayout.QLayout): void =

  fcQFormLayout_addRowWithLayout(self.h, layout.h)

proc insertRow*(self: QFormLayout, row: cint, label: gen_qwidget.QWidget, field: gen_qwidget.QWidget): void =

  fcQFormLayout_insertRow(self.h, row, label.h, field.h)

proc insertRow2*(self: QFormLayout, row: cint, label: gen_qwidget.QWidget, field: gen_qlayout.QLayout): void =

  fcQFormLayout_insertRow2(self.h, row, label.h, field.h)

proc insertRow3*(self: QFormLayout, row: cint, labelText: string, field: gen_qwidget.QWidget): void =

  fcQFormLayout_insertRow3(self.h, row, struct_miqt_string(data: labelText, len: csize_t(len(labelText))), field.h)

proc insertRow4*(self: QFormLayout, row: cint, labelText: string, field: gen_qlayout.QLayout): void =

  fcQFormLayout_insertRow4(self.h, row, struct_miqt_string(data: labelText, len: csize_t(len(labelText))), field.h)

proc insertRow5*(self: QFormLayout, row: cint, widget: gen_qwidget.QWidget): void =

  fcQFormLayout_insertRow5(self.h, row, widget.h)

proc insertRow6*(self: QFormLayout, row: cint, layout: gen_qlayout.QLayout): void =

  fcQFormLayout_insertRow6(self.h, row, layout.h)

proc removeRow*(self: QFormLayout, row: cint): void =

  fcQFormLayout_removeRow(self.h, row)

proc removeRowWithWidget*(self: QFormLayout, widget: gen_qwidget.QWidget): void =

  fcQFormLayout_removeRowWithWidget(self.h, widget.h)

proc removeRowWithLayout*(self: QFormLayout, layout: gen_qlayout.QLayout): void =

  fcQFormLayout_removeRowWithLayout(self.h, layout.h)

proc takeRow*(self: QFormLayout, row: cint): QFormLayoutTakeRowResult =

  QFormLayoutTakeRowResult(h: fcQFormLayout_takeRow(self.h, row))

proc takeRowWithWidget*(self: QFormLayout, widget: gen_qwidget.QWidget): QFormLayoutTakeRowResult =

  QFormLayoutTakeRowResult(h: fcQFormLayout_takeRowWithWidget(self.h, widget.h))

proc takeRowWithLayout*(self: QFormLayout, layout: gen_qlayout.QLayout): QFormLayoutTakeRowResult =

  QFormLayoutTakeRowResult(h: fcQFormLayout_takeRowWithLayout(self.h, layout.h))

proc setItem*(self: QFormLayout, row: cint, role: QFormLayoutItemRole, item: gen_qlayoutitem.QLayoutItem): void =

  fcQFormLayout_setItem(self.h, row, cint(role), item.h)

proc setWidget*(self: QFormLayout, row: cint, role: QFormLayoutItemRole, widget: gen_qwidget.QWidget): void =

  fcQFormLayout_setWidget(self.h, row, cint(role), widget.h)

proc setLayout*(self: QFormLayout, row: cint, role: QFormLayoutItemRole, layout: gen_qlayout.QLayout): void =

  fcQFormLayout_setLayout(self.h, row, cint(role), layout.h)

proc itemAt*(self: QFormLayout, row: cint, role: QFormLayoutItemRole): gen_qlayoutitem.QLayoutItem =

  gen_qlayoutitem.QLayoutItem(h: fcQFormLayout_itemAt(self.h, row, cint(role)))

proc labelForField*(self: QFormLayout, field: gen_qwidget.QWidget): gen_qwidget.QWidget =

  gen_qwidget.QWidget(h: fcQFormLayout_labelForField(self.h, field.h))

proc labelForFieldWithField*(self: QFormLayout, field: gen_qlayout.QLayout): gen_qwidget.QWidget =

  gen_qwidget.QWidget(h: fcQFormLayout_labelForFieldWithField(self.h, field.h))

proc addItem*(self: QFormLayout, item: gen_qlayoutitem.QLayoutItem): void =

  fcQFormLayout_addItem(self.h, item.h)

proc itemAtWithIndex*(self: QFormLayout, index: cint): gen_qlayoutitem.QLayoutItem =

  gen_qlayoutitem.QLayoutItem(h: fcQFormLayout_itemAtWithIndex(self.h, index))

proc takeAt*(self: QFormLayout, index: cint): gen_qlayoutitem.QLayoutItem =

  gen_qlayoutitem.QLayoutItem(h: fcQFormLayout_takeAt(self.h, index))

proc setGeometry*(self: QFormLayout, rect: gen_qrect.QRect): void =

  fcQFormLayout_setGeometry(self.h, rect.h)

proc minimumSize*(self: QFormLayout, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQFormLayout_minimumSize(self.h))

proc sizeHint*(self: QFormLayout, ): gen_qsize.QSize =

  gen_qsize.QSize(h: fcQFormLayout_sizeHint(self.h))

proc invalidate*(self: QFormLayout, ): void =

  fcQFormLayout_invalidate(self.h)

proc hasHeightForWidth*(self: QFormLayout, ): bool =

  fcQFormLayout_hasHeightForWidth(self.h)

proc heightForWidth*(self: QFormLayout, width: cint): cint =

  fcQFormLayout_heightForWidth(self.h, width)

proc expandingDirections*(self: QFormLayout, ): gen_qnamespace.Orientation =

  gen_qnamespace.Orientation(fcQFormLayout_expandingDirections(self.h))

proc count*(self: QFormLayout, ): cint =

  fcQFormLayout_count(self.h)

proc rowCount*(self: QFormLayout, ): cint =

  fcQFormLayout_rowCount(self.h)

proc tr2*(_: type QFormLayout, s: cstring, c: cstring): string =

  let v_ms = fcQFormLayout_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type QFormLayout, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQFormLayout_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf82*(_: type QFormLayout, s: cstring, c: cstring): string =

  let v_ms = fcQFormLayout_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf83*(_: type QFormLayout, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQFormLayout_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc callVirtualBase_metacall(self: QFormLayout, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =


  fQFormLayout_virtualbase_metacall(self.h, cint(param1), param2, param3)

type QFormLayoutmetacallBase* = proc(param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
proc onmetacall*(self: QFormLayout, slot: proc(super: QFormLayoutmetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint) =
  # TODO check subclass
  type Cb = proc(super: QFormLayoutmetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQFormLayout_override_virtual_metacall(self.h, cast[int](addr tmp[]))
